<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">후추통</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tag_page_id">TAG_PAGE_ID</string>
    <string name="tag_row">TAG_ROW</string>
    <string name="tag_cal">TAG_CAL</string>
    <string name="tag_res_id">TAG_RES_ID</string>
    <string name="tag_res_path">TAG_RES_PATH</string>

    <string name="prev">이전</string>
    <string name="next">다음</string>

    <string name="title_ordergrid">주문할 사진 선택/자르기</string>
    <string name="title_selectphoto">사진선택</string>
    <string name="title_orderlist">제품선택</string>
    <string name="title_orderalbum">제품편집</string>
    <string name="title_orderinfo">주문정보입력</string>
    <string name="select_photo_info">아래에서 주문하실 제품을 선택 하세요.</string>

    <string name="select_grid_info">아래 창에서 사진을 길게 누르면 삭제하실 수 있습니다.</string>

    <string name="agent_info">대리점 정보</string>
    <string name="agent_name">대리점명</string>
    <string name="phone">전화번호</string>
    <string name="address">주 소</string>
    <string name="target">수령지 선택</string>
    <string name="customer_info">주문자 이름</string>
    <string name="goods">주문상품</string>
    <string name="num">주문수량</string>
    <string name="name">이  름</string>
    <string name="order_info_text">주문하신 상품은 최초 등록하신 대리점에서 수령하실 수 있습니다</string>

    <string name="join_hint">실행 코드 입력</string>
    <string name="cupon_hint">쿠폰 코드 입력</string>
    <string name="main_menu_select">원하시는 메뉴를 선택해 주세요</string>
    <string name="select_item">아래에서 주문하실 제품을 선택하시고 다음을 눌러주세요</string>
    <string name="input_order_info">정보를 입력하시고 주문 버튼을 눌러주세요</string>

    <string name="pay_title">결제하기</string>
    <string name="pay_info">원하시는 결제 방법으로 결제를 해주세요</string>

    <string name="pay_complete_title">주문완료</string>
    <string name="pay_complete_info">주문이 정상적으로 완료 되었습니다.\n원하시는 메뉴를 눌러주세요</string>

    <string name="pay_cancel_info">주문이 취소 되었습니다.\n원하시는 메뉴를 눌러주세요</string>

    <string name="pay_complete_body">주문이 완료 되었습니다.</string>
    <string name="pay_complete_home">처음으로</string>
    <string name="pay_complete_list">주문내역확인</string>

    <string name="order_list_title">주문내역확인</string>
    <string name="order_list_info">주문하신 내역을 확인 하세요</string>
    <string name="goto_first">처음으로</string>
    <string name="date">날짜</string>
    <string name="order_number">주문번호</string>
    <string name="order_name">주문자</string>
    <string name="order_goods">주문제품</string>
    <string name="order_price">가격</string>
    <string name="order_status">현재상태</string>

    <string name="net_dialog_title">서버 요청중</string>
    <string name="net_dialog_context">서버에 정보 요청중입니다...</string>

    <string name="order_address_title">주소 입력</string>
    <string name="complete">완료</string>

    <string name="address01">시(도)</string>
    <string name="address02">구(군)</string>
    <string name="address03">동(읍, 면)</string>
    <string name="address04">우편번호</string>

    <string name="html_home">집으로 받기(2~3일 소요, 택배비 2500원 발생) &lt;br&gt;&lt;font color=\'red\'&gt;4권이상 주문 시 배송비 무료입니다.&lt;/font&gt;</string>


    <!-- Server  -->
    <string name="send_title">서버 전송</string>
    <string name="send_context">서버 전송 준비중입니다.</string>
    <string name="send_image_list">이미지 정보</string>
    <string name="send_image_ok">전송</string>
    <string name="send_image_cancel">취소</string>
    <string name="send_image_size">총 이미지 사이즈:</string>
    <string name="send_path">서버 이미지 경로:</string>


    <string name="tag_image_path">TAG_IMAGE_PATH</string>
    <string name="tag_image_res">TAG_IMAGE_RES</string>
    <string name="tstbutton">전송</string>

    <string name="total_price_info">총 결제 금액</string>
    <string name="loading_text00">(주)피엔아이티. 대표이사 박진수</string>
    <string name="loading_text01">사업자 번호: 119-86-56118. 전화: 1644-1030</string>
    <string name="loading_text02">서울시 금천구 가산동 345-34 학림공업내 2층</string>

    <string name="auto_edit">클릭하시면 현재 페이지에 사진을 자동으로 드레그합니다.</string>
    <string name="auto_select">클릭하시면 불러온 사진 순서대로 사진을 자릅니다.</string>

    <string name="tag_path">TAG_PATH</string>
</resources>
