<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cc2b3b"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_prev_btn"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnPre"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/order_list_title"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_order_btn02"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnOrder"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/order_list_info"
            android:background="@drawable/infotext_bg"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/date"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/order_goods"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="@string/order_price"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/order_status"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/lvOrderList"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGotoHome"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:text="@string/goto_first"
            android:textColor="#ffffff"
            android:background="@drawable/btn_back"
            />

</LinearLayout>
