<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cc2b3b"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_prev_btn"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnPre"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_orderinfo"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_order_btn02"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnOrder"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/llPay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/input_order_info"
                android:background="@drawable/infotext_bg"
                android:gravity="center"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1.0"
                >

                <WebView
                    android:id="@+id/contentView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:layout_weight="1.0"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/tstLinearLayout"
                style="@android:style/ButtonBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnPay"
                    android:onClick="processCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/tstbutton" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llComplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvComplete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/pay_complete_info"
                android:background="@drawable/infotext_bg"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pay_complete_body"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnGotoHome"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/pay_complete_home"
                    android:textColor="#ffffff"
                    android:background="@drawable/btn_back"
                    />
                <Button
                    android:id="@+id/btnGoToList"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:text="@string/pay_complete_list"
                    android:textColor="#ffffff"
                    android:background="@drawable/btn_back"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
