<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cc2b3b"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_prev_btn"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnPre"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/order_address_title"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_order_btn02"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:id="@+id/btnOrder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/address01"
                android:id="@+id/tvAddress01"/>
            <Button
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/btnAddress01"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/address02"
                android:id="@+id/tvAddress02"/>
            <Button
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/btnAddress02"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/address03"
                android:id="@+id/tvAddress03"/>
            <Button
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/btnAddress03"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/address04"
                android:id="@+id/tvAddress04"/>
            <Button
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/btnAddress04"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="세부 주소 입력"
            android:textSize="20sp"
            android:singleLine="true"
            android:id="@+id/etAddressDetail"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="@string/complete"
        android:textColor="#ffffff"
        android:background="@drawable/btn_back"
        />
</LinearLayout>
