<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cc2b3b"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_prev_btn"
            android:background="@android:color/transparent"
            android:id="@+id/btnPre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_title"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_order_btn02"
            android:background="@android:color/transparent"
            android:id="@+id/btnOrder"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/send_context"
        android:background="@drawable/infotext_bg"
        android:gravity="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/imgupload_text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/send_image_size"/>
            <TextView
                android:id="@+id/tvImageSize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                />
            </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_image_ok"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_back" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_image_cancel"
            android:textColor="#ffffff"
            android:background="@drawable/btn_back" />
    </LinearLayout>
</LinearLayout>