<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/autorized_bg"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:paddingTop="70dp"
                android:orientation="vertical">
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:id="@+id/etShop"
                    android:background="#ffffff"
                    android:hint="@string/join_hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="2dp"
                    android:id="@+id/etCupon"
                    android:background="#ffffff"
                    android:hint="@string/cupon_hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:visibility="invisible"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="84dp"
                        android:layout_height="27dp"
                        android:id="@+id/btnOk"
                        android:background="@drawable/input_ok"
                        android:layout_gravity="center"
                        />
                    <Button
                        android:layout_width="84dp"
                        android:layout_height="27dp"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/btnCuponInput"
                        android:background="@drawable/inputcouponcode_btn"
                        android:layout_gravity="center"
                        />

                </LinearLayout>
                <Button
                    android:layout_width="250dp"
                    android:layout_height="80dp"
                    android:id="@+id/btnSendSMS"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/recommend_btn"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:text="@string/loading_text00"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:text="@string/loading_text01"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"
                    android:text="@string/loading_text02"/>
            </LinearLayout>
        </LinearLayout>
</ScrollView>
</RelativeLayout>
