<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#cc2b3b"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_prev_btn"
            android:background="@android:color/transparent"
            android:id="@+id/btnPre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_ordergrid"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_order_btn02"
            android:background="@android:color/transparent"
            android:id="@+id/btnOrder"/>
    </LinearLayout>
    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/flPhotoFrame">
        <LinearLayout
            android:id="@+id/llPhotoGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/select_grid_info"
                android:background="@drawable/infotext_bg"
                android:gravity="center"/>
            <GridView
                android:id="@+id/gdPhotoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:padding="20dp"
                android:columnWidth="150dp"
                android:stretchMode="columnWidth"
                android:layout_weight="1"
                android:visibility="gone">
            </GridView>
            <ImageView
                android:id="@+id/ivEmptyMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:layout_weight="1"
                android:src="@drawable/orderpicinfo"
                />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/menu_bar02"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btnAutoSelect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_autocrop"
                android:clickable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/auto_select"
                android:gravity="center"
                android:textSize="11sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnSelectPhoto"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_loadimg"
                android:clickable="true" />

            <HorizontalScrollView
                android:id="@+id/hsvPhoto"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llPhotoSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
